# rsomics-connectivity

./: Cargo.toml  README.md
benches/: bench.rs  gnm_150_600.txt
src/: cli.rs  dinic.rs  graph.rs  lib.rs
tests/: compat.rs
tests/golden/: gnm_dense.txt  gnm_medium.txt  gnm_sparse.txt
